syntax = "proto3";

package coral.colony.v1;

import "google/protobuf/timestamp.proto";
import "coral/mesh/v1/auth.proto";
import "coral/agent/v1/agent.proto";
import "coral/colony/v1/mcp.proto";

option go_package = "github.com/coral-mesh/coral/proto/colony/v1;colonypb";

// Colony management service exposed on mesh network.
service ColonyService {
  // Get colony status and health.
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);

  // List connected agents.
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);

  // Get network topology.
  rpc GetTopology(GetTopologyRequest) returns (GetTopologyResponse);

  // Unified query interface (RFD 067) - replaces QueryTelemetry (RFD 025) and QueryEbpfMetrics (RFD 035).
  rpc QueryUnifiedSummary(QueryUnifiedSummaryRequest) returns (QueryUnifiedSummaryResponse);
  rpc QueryUnifiedTraces(QueryUnifiedTracesRequest) returns (QueryUnifiedTracesResponse);
  rpc QueryUnifiedMetrics(QueryUnifiedMetricsRequest) returns (QueryUnifiedMetricsResponse);
  rpc QueryUnifiedLogs(QueryUnifiedLogsRequest) returns (QueryUnifiedLogsResponse);


  // MCP Tool Execution (RFD 004 - MCP server integration).

  // Execute an MCP tool and return the result.
  rpc CallTool(CallToolRequest) returns (CallToolResponse);

  // Execute an MCP tool with streaming (bidirectional).
  rpc StreamTool(stream StreamToolRequest) returns (stream StreamToolResponse);

  // List available MCP tools.
  rpc ListTools(ListToolsRequest) returns (ListToolsResponse);

  // Certificate management (RFD 047 - Colony CA Infrastructure).

  // Request a client certificate using a bootstrap token.
  rpc RequestCertificate(RequestCertificateRequest) returns (RequestCertificateResponse);

  // Revoke an issued certificate.
  rpc RevokeCertificate(RevokeCertificateRequest) returns (RevokeCertificateResponse);
}

message GetStatusRequest {}

message GetStatusResponse {
  // Colony identifier.
  string colony_id = 1;

  // Application name.
  string app_name = 2;

  // Environment (e.g., "production", "staging").
  string environment = 3;

  // Status ("running", "degraded", "unhealthy").
  string status = 4;

  // When the colony started.
  google.protobuf.Timestamp started_at = 5;

  // Uptime in seconds.
  int64 uptime_seconds = 6;

  // Number of connected agents.
  int32 agent_count = 7;

  // Dashboard URL.
  string dashboard_url = 8;

  // Storage size in bytes.
  int64 storage_bytes = 9;

  // Network endpoint information.
  // WireGuard listen port (UDP).
  int32 wireguard_port = 10;

  // WireGuard public key.
  string wireguard_public_key = 11;

  // WireGuard registered endpoints (e.g., ":51820").
  repeated string wireguard_endpoints = 12;

  // Buf Connect service port (TCP).
  int32 connect_port = 13;

  // Colony mesh IPv4 address.
  string mesh_ipv4 = 14;

  // Colony mesh IPv6 address.
  string mesh_ipv6 = 15;

  // Number of active agents.
  int32 active_agent_count = 16;

  // Number of degraded agents.
  int32 degraded_agent_count = 17;
}

message ListAgentsRequest {}

message ListAgentsResponse {
  repeated Agent agents = 1;
}

message Agent {
  // Agent identifier.
  string agent_id = 1;

  // DEPRECATED: Component name (single-service mode).
  // Use 'services' field for multi-service agents.
  string component_name = 2 [deprecated = true];

  // Mesh IPv4 address.
  string mesh_ipv4 = 3;

  // Mesh IPv6 address.
  string mesh_ipv6 = 4;

  // Last seen timestamp.
  google.protobuf.Timestamp last_seen = 5;

  // Status ("healthy", "degraded", "unhealthy").
  string status = 6;

  // Services monitored by this agent (RFD 011).
  repeated coral.mesh.v1.ServiceInfo services = 7;

  // NEW: Runtime context (RFD 018).
  coral.agent.v1.RuntimeContextResponse runtime_context = 8;
}

message GetTopologyRequest {}

message GetTopologyResponse {
  // Colony identifier.
  string colony_id = 1;

  // List of agents.
  repeated Agent agents = 2;

  // List of connections between components.
  repeated Connection connections = 3;
}

message Connection {
  // Source component ID.
  string source_id = 1;

  // Target component ID.
  string target_id = 2;

  // Connection type ("http", "grpc", "database", etc.).
  string connection_type = 3;
}

// Certificate management messages (RFD 047 - Colony CA Infrastructure)

// RequestCertificateRequest requests a client certificate using a bootstrap token.
message RequestCertificateRequest {
  // Bootstrap token (JWT).
  string jwt = 1;

  // Certificate signing request (PEM-encoded).
  bytes csr = 2;
}

// RequestCertificateResponse returns the issued certificate.
message RequestCertificateResponse {
  // Client certificate (PEM-encoded).
  bytes certificate = 1;

  // CA certificate chain (PEM-encoded).
  bytes ca_chain = 2;

  // Certificate expiration timestamp (Unix seconds).
  int64 expires_at = 3;
}

// RevokeCertificateRequest revokes a previously issued certificate.
message RevokeCertificateRequest {
  // Certificate serial number.
  string serial_number = 1;

  // Revocation reason.
  string reason = 2;
}

// RevokeCertificateResponse confirms certificate revocation.
message RevokeCertificateResponse {
  // Revocation successful.
  bool success = 1;
}

// Unified Query Interface (RFD 067)

message QueryUnifiedSummaryRequest {
  // Optional: specific service or all services.
  string service = 1;

  // Time range (e.g., "5m", "1h").
  string time_range = 2;
}

message UnifiedSummaryResult {
  // Service name.
  string service_name = 1;

  // Health status: healthy, degraded, critical.
  string status = 2;

  // Total requests/spans.
  int64 request_count = 3;

  // Error rate as percentage (0-100).
  double error_rate = 4;

  // Average latency in milliseconds.
  double avg_latency_ms = 5;

  // Data source: eBPF, OTLP, or eBPF+OTLP.
  string source = 6;

  // Issues detected (human-readable descriptions).
  repeated string issues = 7;

  // Host resources (RFD 071).
  double host_cpu_utilization = 8;      // CPU utilization percentage (max in time window)
  double host_cpu_utilization_avg = 9;  // CPU utilization percentage (average in time window)
  double host_memory_usage_gb = 10;     // Memory usage in GB (max in time window)
  double host_memory_limit_gb = 11;     // Memory limit in GB
  double host_memory_utilization = 12;  // Memory utilization percentage (max in time window)
  string agent_id = 13;                 // Agent ID for correlation
}

message QueryUnifiedSummaryResponse {
  // Structured summary results.
  repeated UnifiedSummaryResult summaries = 1;
}

message QueryUnifiedTracesRequest {
  // Optional: filter by service.
  string service = 1;

  // Time range (default: "1h").
  string time_range = 2;

  // Optional: ebpf|telemetry|all (default: all).
  string source = 3;

  // Optional: specific trace ID.
  string trace_id = 4;

  // Optional: filter slow traces (milliseconds).
  int32 min_duration_ms = 5;

  // Maximum traces to return.
  int32 max_traces = 6;
}

message QueryUnifiedTracesResponse {
  // Structured trace spans (eBPF + OTLP).
  repeated coral.agent.v1.EbpfTraceSpan spans = 1;

  // Total traces returned.
  int32 total_traces = 2;
}

message QueryUnifiedMetricsRequest {
  // Optional: filter by service.
  string service = 1;

  // Time range (default: "1h").
  string time_range = 2;

  // Optional: ebpf|telemetry|all (default: all).
  string source = 3;

  // Optional: http|grpc|sql|auto (default: auto).
  string protocol = 4;

  // Optional: HTTP route filter.
  string http_route = 5;

  // Optional: HTTP method filter.
  string http_method = 6;

  // Optional: HTTP status code range filter.
  string status_code_range = 7;
}

message QueryUnifiedMetricsResponse {
  // Structured HTTP metrics (eBPF + OTLP).
  repeated coral.agent.v1.EbpfHttpMetric http_metrics = 1;

  // Structured gRPC metrics (eBPF + OTLP).
  repeated coral.agent.v1.EbpfGrpcMetric grpc_metrics = 2;

  // Structured SQL metrics (eBPF + OTLP).
  repeated coral.agent.v1.EbpfSqlMetric sql_metrics = 3;

  // Total metrics returned.
  int32 total_metrics = 4;
}

message QueryUnifiedLogsRequest {
  // Optional: filter by service.
  string service = 1;

  // Time range (default: "1h").
  string time_range = 2;

  // Optional: debug|info|warn|error.
  string level = 3;

  // Optional: full-text search.
  string search = 4;

  // Maximum logs to return.
  int32 max_logs = 5;
}

message UnifiedLogEntry {
  // Timestamp (Unix milliseconds).
  int64 timestamp = 1;

  // Service name.
  string service_name = 2;

  // Log level: debug, info, warn, error.
  string level = 3;

  // Log message.
  string message = 4;

  // Associated trace ID (if any).
  string trace_id = 5;

  // Additional attributes.
  map<string, string> attributes = 6;
}

message QueryUnifiedLogsResponse {
  // Structured log entries.
  repeated UnifiedLogEntry logs = 1;

  // Total logs returned.
  int32 total_logs = 2;
}
